@@ -50,7 +50,7 @@ import org.springframework.core.annotation.AliasFor;
  * multiple instances of {@code @Sql}.
  *
  * <p>This annotation may be used as a <em>meta-annotation</em> to create custom
- * <em>composed annotations</em>.
+ * <em>composed annotations</em> with attribute overrides.
  *
  * @author Sam Brannen
  * @since 4.1
