@@ -633,11 +633,14 @@ public @interface MyTestConfig {
   bean only defines one constructor.
 * `@Configuration` classes support constructor injection.
 * Any SpEL expression used to specify the `condition` of an `@EventListener` can
-  now refer to beans (i.e. `@beanName.method()`).
+  now refer to beans (e.g. `@beanName.method()`).
 * _Composed annotations_ can now override array attributes in meta-annotations
   with a single element of the component type of the array. For example, the
   `String[] path` attribute of `@RequestMapping` can be overridden with
   `String path` in a composed annotation.
+* `@Scheduled` and `@Schedules` may now be used as _meta-annotations_ to create
+  custom _composed annotations_ with attribute overrides.
+
 
 === Data Access Improvements
 
@@ -661,7 +664,9 @@ Spring 4.3 also improves the caching abstraction as follows:
 
 === JMS Improvements
 
-* `@SendTo` can now be specified at class-level to share a common reply destination.
+* `@SendTo` can now be specified at the class level to share a common reply destination.
+* `@JmsListener` and `@JmsListeners` may now be used as _meta-annotations_ to create
+  custom _composed annotations_ with attribute overrides.
 
 === Web Improvements
 
@@ -694,6 +699,8 @@ Spring 4.3 also improves the caching abstraction as follows:
   definitions have been loaded into the context but _before_ the context has been refreshed.
   Customizers can be registered globally by third parties, foregoing the need to implement a
   custom `ContextLoader`.
+* `@Sql` and `@SqlGroup` may now be used as _meta-annotations_ to create custom _composed
+  annotations_ with attribute overrides.
 * Server-side Spring MVC Test supports expectations on response headers with multiple values.
 * Server-side Spring MVC Test parses form data request content and populates request parameters.
 * Client-side REST test support allows indicating how many times a request is expected and
